--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -15,7 +15,7 @@ h4, h5, p {
 .container {
     display: flex;
     justify-content: flex-start;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .item {
